# 2025-eCTF-design

./: .gitignore  Dockerfile  README.md  build.sh  build_ap.sh  channel1_big.sub  channel2_big_but_smaller.sub  decode_stdin.sh  docker-compose.yml  encoded_frames  encoded_frames_c0  flash.sh  gen_subscribe.sh  list.sh  log_serial.py  make_secrets.sh  modified_tester.py  notes.txt  print_serial.py  runTests.sh  shell.nix  subscribe.sh  upload.py  x_c0.json
.github/workflows/: build.yml
application_processor/: Cargo.toml
application_processor/.cargo/: config.toml
application_processor/src/: ap_driver.rs  boot.rs  ectf_params.rs  list.rs
application_processor/src/post_boot/: mod.rs
component/: Cargo.toml  Makefile
component/src/: component_driver.rs  ectf_params.rs
decoder/: Dockerfile  README.md  build.sh  build_comp.sh  post_boot_tool.py  rust-toolchain.toml  setupssh.sh  upload.sh
decoder/application_processor/: Makefile.toml  build.rs
decoder/application_processor/inc/: ectf_params.h
decoder/application_processor/post_boot/: post_boot.c
decoder/application_processor/src/: replace.rs
decoder/application_processor/src/post_boot/: messaging.rs
decoder/component/: Makefile.toml  README.md  build.rs  link.x
decoder/component/post_boot/: post_boot.c
decoder/component/src/: main.rs
decoder/component/src/post_boot/: messaging.rs  mod.rs
decoder/decoder/: Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  link.x
decoder/decoder/.cargo/: config.toml
decoder/decoder/src/: attest.rs  crypto.rs  decode.rs  decoder_context.rs  decoder_driver.rs  ectf_params.rs  main.rs  message.rs  subscribe.rs  utils.rs
decoder/deployment/: README.md
decoder/deployment/src/: lib.rs
decoder/design_macros/: Cargo.toml  README.md
decoder/design_macros/src/: lib.rs
decoder/design_utils/: Cargo.toml
decoder/design_utils/src/: anti_hardware.rs  crypto.rs  lib.rs  libc_functions.rs  str.rs
decoder/max78000_device/: Cargo.toml  README.md
decoder/max78000_device/src/: lib.rs
decoder/max78000_hal/: Cargo.toml  build.rs
decoder/max78000_hal/src/: committed_array.rs  flash.rs  gcr.rs  gpio.rs  i2c.rs  icc.rs  led.rs  lib.rs  mpu.rs  prelude.rs  timer.rs  trng.rs  uart.rs
deployment/: Cargo.toml  Makefile
deployment/src/: main.rs
design/: pyproject.toml
design/ectf25_design/: README.md  encoder.py  gen_secrets.py  gen_subscription.py  key_gen.py  node_derivation.py  util.py
design_utils/: README.md
design_utils/src/: anti_hardware.rs  messages.rs
ectf_tools/: README.md
max78000_hal/: README.md
max78000_hal/src/: committed_array.rs  flash.rs  gcr.rs  gpio.rs  i2c.rs  led.rs  lib.rs  prelude.rs  timer.rs  trng.rs  uart.rs
tools/: README.md
tools/ectf25/: key_gen.py  testing.txt
tools/ectf25/tv/: subscribe.py
tools/ectf25/utils/: tester_patched.py
