[package]
name = "deployment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
chacha20poly1305 = "0.10.1"
thiserror = "1.0.57"
