[package]
name = "decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.2", features = ["set-sp", "set-vtor"] }
max78000_hal = { path = "../max78000_hal" }
bytemuck = { version = "1.14.1", features = ["must_cast", "derive"] }
thiserror-no-std = "2.0.2"
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
tinyvec = "1.6.0"
ed25519-dalek = { version = "2.1.1", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }

[build-dependencies]
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.137"
argon2 = "0.5.3"
ed25519-dalek = { version = "2.1.1", default-features = false }
rand = "0.8.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
