[package]
name = "design_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
design_macros = { path = "../design_macros" }
bcrypt = { version = "0.15.0", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
ed25519 = { version = "2.2.3", default-features = false }
ed25519-dalek = { version = "2.1.1", default-features = false }
hmac = { version = "0.12.1", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"]}
postcard = "1.0.8"
max78000_hal = { path = "../max78000_hal" }
tinyvec = { version = "1.6.0", features = ["serde", "rustc_1_55"] }
subtle = { version = "2.5", default-features = false }
thiserror-no-std = "2.0.2"
rand_chacha = { version = "0.3.1", default-features = false }